--- a/style.css
+++ b/style.css
@@ -663,8 +663,14 @@ span {
 }
 
 @media(max-width:895px){
+
+  
   #menu-icon{
     display: block;
+  }
+
+  .text-animation{
+    font-size: 75%;
   }
 
   .navbar{
@@ -743,6 +749,17 @@ span {
 
   .projects-container , .skills-section{
     grid-template-columns: repeat(1,1fr);
+  }
+
+  .modalTitle{
+    margin: 50px;
+    text-decoration-line: underline;
+    text-align: center;
+    font-size: 15px;
+  }
+  
+  .modalDescription{
+    font-size: 9px;
   }
 
 }
