--- a/style.css
+++ b/style.css
@@ -788,8 +788,27 @@ span {
     padding: 2rem 5%;
   }
 
-  .home-content{
-    font-size: 75%;
+  .home-content {
+    text-align: center;
+    margin-top: 2rem;
+  }
+
+  .home-content h3 {
+    font-size: 2.5rem;
+  }
+
+  .home-content h3:nth-of-type(2) {
+    margin-bottom: 1rem;
+    font-size: 3.5rem;
+  }
+
+  .home-content h1 {
+    font-size: 5rem;
+  }
+
+  .home-content p {
+    font-size: 1.4rem;
+    width: 100%;
   }
 
   .navbar {
